Added Swagger API documentation UI Added api paths to properties

--- a/config/application.properties
+++ b/config/application.properties
@@ -14,6 +14,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>
 #
 
+centralcontroller.api.v1.path=/api/v1
 
 cloudservices.directory = ./config/extensions
 cloudservices.configFileName = cloud-service-extension.json
