--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.jjwtVersion = '0.9.0'
     ext.propdepsPluginVersion='0.0.10.RELEASE'
     ext.jacksonVersion='2.9.3'
+    ext.swaggerVersion='2.7.0'
 
     repositories {
         jcenter()
@@ -109,6 +110,9 @@ dependencies {
     compile "io.jsonwebtoken:jjwt:$jjwtVersion"
     //logging
     compile "io.github.microutils:kotlin-logging:$kotlinLoggingVersion"
+    //swagger
+    compile "io.springfox:springfox-swagger2:$swaggerVersion"
+    compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
     //test
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
