--- a/config/application.properties
+++ b/config/application.properties
@@ -27,7 +27,7 @@ jwt.expiration = 2592000000
 jwt.disabled=false
 
 encryptionextensions.directory = config/extensions
-encryptionextensions.configFileName = encryption-service-extension.json
+encryptionextensions.configFileName = encryption-extension.json
 encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
 
