Work on login web ui page

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -84,7 +84,7 @@ databaseChangeLog:
                   value: test
               - column:
                   name: password
-                  value: '$2a$06$ncXfcuTwtLaktLL0epJYJuflWSjgaQuiMIFwxRt8e1wyhoKvllY3q'
+                  value: '$2a$10$QAvWmPlLkw7s0G4tRj5aL.jPrPRmziPJg9Nw7FA/rGO.dPvqxJlI.'
         - insert:
             tableName: user_roles
             columns:
@@ -120,7 +120,7 @@ databaseChangeLog:
                   value: admin
               - column:
                   name: password
-                  value: '$2a$06$8SUHH8rSwhF/KsAPGmjYy.CatNNV3GSv4YgkyKNcG47cdO6uccqTu'
+                  value: '$2a$10$QAvWmPlLkw7s0G4tRj5aL.jPrPRmziPJg9Nw7FA/rGO.dPvqxJlI.'
         - insert:
             tableName: user_roles
             columns:
