--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,23 @@
+/*
+ * Copyright (C) 2016-2018  Irotsoma, LLC
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ */
 
 buildscript {
     ext.commonVersion = '0.3-SNAPSHOT'
-    ext.springBootVersion = '1.5.9.RELEASE'
-    ext.kotlinVersion = '1.2.10'
+    ext.springBootVersion = '1.5.10.RELEASE'
+    ext.kotlinVersion = '1.2.21'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
     ext.dokkaVersion = '0.9.14'
@@ -43,6 +58,7 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'kotlin-jpa'
+apply plugin: "kotlin-kapt"
 apply plugin: 'signing'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'propdeps'
@@ -88,6 +104,7 @@ dependencies {
     compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-devtools'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
+    kapt 'org.springframework.boot:spring-boot-configuration-processor'
     //common classes
     compile "com.irotsoma.cloudbackenc:common:$commonVersion"
     compile "com.irotsoma.cloudbackenc.common:cloudservices:$commonVersion"
@@ -123,22 +140,6 @@ sourceSets {
     main.resources.srcDirs += "$buildDir/license-reports/"
 }
 
-/*
- * Copyright (C) 2016-2018  Irotsoma, LLC
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- * You should have received a copy of the GNU Lesser General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>
- */
-
 //exclude spring boot logging as it will conflict with the slf4j used by kotlin logging
 configurations {
     all*.exclude module : 'spring-boot-starter-logging'
@@ -155,7 +156,7 @@ license {
     ignoreFailures true
     mapping('kt', 'JAVADOC_STYLE')
     mapping('fxml', 'XML_STYLE')
-    excludes(['**/*.json', '**/*.properties', '**/LICENSE', '**/*license*.html', '**/*license*.xml', '**/COPYING', '**/COPYING.LESSER', '**/*.jar'])
+    excludes(['**/*.json', '**/LICENSE', '**/*license*.html', '**/*license*.xml', '**/COPYING', '**/COPYING.LESSER', '**/*.jar', '**/*.dat'])
 }
 task copyLicenseReports(type: Copy) {
     from "$buildDir/reports/license/"
@@ -200,3 +201,7 @@ springBoot {
 compileKotlin {
     kotlinOptions.jvmTarget= "1.8"
 }
+compileKotlin.dependsOn(processResources)
+compileTestKotlin.dependsOn(processTestResources)
+compileJava.dependsOn(processResources)
+compileTestJava.dependsOn(processTestResources)
