--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2016-2017  Irotsoma, LLC
+# Copyright (C) 2016-2018  Irotsoma, LLC
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
@@ -297,7 +297,7 @@ databaseChangeLog:
                   name: encryption_block_size
                   type: int
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: secret_key
                   type: varbinary(5000)
