--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
 
 buildscript {
     ext.commonVersion = '0.3-SNAPSHOT'
-    ext.springBootVersion = '1.5.10.RELEASE'
+    ext.springBootVersion = '2.0.0.RELEASE'
     ext.kotlinVersion = '1.2.21'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
@@ -58,9 +58,10 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'kotlin-jpa'
-apply plugin: "kotlin-kapt"
+apply plugin: 'kotlin-kapt'
 apply plugin: 'signing'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'propdeps'
 apply plugin: 'org.liquibase.gradle'
 def isReleaseVersion = !version.endsWith("SNAPSHOT")
@@ -101,7 +102,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-mail'
-    compile 'org.springframework.security.oauth:spring-security-oauth2'
+    //compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-devtools'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
     kapt 'org.springframework.boot:spring-boot-configuration-processor'
@@ -195,10 +196,10 @@ processResources {
     }
 }
 
-springBoot {
-    executable = true
-}
 compileKotlin {
+    kotlinOptions.jvmTarget= "1.8"
+}
+compileTestKotlin {
     kotlinOptions.jvmTarget= "1.8"
 }
 compileKotlin.dependsOn(processResources)
