--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  */
 
 buildscript {
-    ext.commonVersion = '0.3-SNAPSHOT'
+    ext.commonVersion = '0.3'
     ext.springBootVersion = '2.0.0.RELEASE'
     ext.kotlinVersion = '1.2.30'
     ext.apacheCommonsValidatorVersion = '1.6'
@@ -53,7 +53,7 @@ plugins {
 }
 
 group 'com.irotsoma.cloudbackenc'
-version '0.3-SNAPSHOT'
+version '0.3'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
