--- a/config/application.properties
+++ b/config/application.properties
@@ -14,6 +14,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>
 #
 
+#spring.profiles.active=dev
+
 centralcontroller.api.v1.path=/api/v1
 
 cloudservices.directory = ./config/extensions
