Added some new functionality for remote creation of encryption profiles. Updated versions to 0.4-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -15,18 +15,18 @@
  */
 
 buildscript {
-    ext.commonVersion = '0.3'
-    ext.springBootVersion = '2.0.0.RELEASE'
-    ext.kotlinVersion = '1.2.30'
+    ext.commonVersion = '0.4-SNAPSHOT'
+    ext.springBootVersion = '2.0.4.RELEASE'
+    ext.kotlinVersion = '1.2.60'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
-    ext.dokkaVersion = '0.9.14'
-    ext.liquibaseGradleVersion = '1.2.4'
-    ext.kotlinLoggingVersion = '1.5.3'
-    ext.jjwtVersion = '0.9.0'
+    ext.dokkaVersion = '0.9.17'
+    ext.liquibaseGradleVersion = '2.0.0'
+    ext.kotlinLoggingVersion = '1.5.9'
+    ext.jjwtVersion = '0.9.1'
     ext.propdepsPluginVersion='0.0.10.RELEASE'
-    ext.jacksonVersion='2.9.4'
-    ext.swaggerVersion='2.8.0'
+    ext.jacksonVersion='2.9.6'
+    ext.swaggerVersion='2.9.2'
 
     repositories {
         jcenter()
@@ -53,7 +53,7 @@ plugins {
 }
 
 group 'com.irotsoma.cloudbackenc'
-version '0.3'
+version '0.4-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
