--- a/config/application.properties
+++ b/config/application.properties
@@ -17,6 +17,7 @@
 #spring.profiles.active=dev
 
 centralcontroller.api.v1.path=/api/v1
+centralcontroller.encryptionProfiles.clean.interval = 86400000
 
 cloudservices.directory = ./config/extensions
 cloudservices.configFileName = cloud-service-extension.json
