Enhanced the token system in central controller to keep track of issued tokens and reject any that are not in the db. Added REST DELETE methods to the token controller to allow for invalidating tokens. Added method to clean up the token database of any tokens that have been expired for more than a day.

--- a/config/application.properties
+++ b/config/application.properties
@@ -18,6 +18,7 @@
 
 centralcontroller.api.v1.path=/api/v1
 centralcontroller.encryptionProfiles.clean.interval = 86400000
+centralcontroller.tokens.clean.interval = 86400000
 
 cloudservices.directory = ./config/extensions
 cloudservices.configFileName = cloud-service-extension.json
