--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,16 @@
 
 buildscript {
     ext.commonVersion = '0.4-SNAPSHOT'
-    ext.springBootVersion = '2.0.4.RELEASE'
-    ext.kotlinVersion = '1.2.60'
+    ext.springBootVersion = '2.1.2.RELEASE'
+    ext.kotlinVersion = '1.3.11'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
     ext.dokkaVersion = '0.9.17'
-    ext.liquibaseGradleVersion = '2.0.0'
-    ext.kotlinLoggingVersion = '1.5.9'
+    ext.liquibaseGradleVersion = '2.0.1'
+    ext.kotlinLoggingVersion = '1.6.22'
     ext.jjwtVersion = '0.9.1'
     ext.propdepsPluginVersion='0.0.10.RELEASE'
-    ext.jacksonVersion='2.9.6'
+    ext.jacksonVersion='2.9.8'
     ext.swaggerVersion='2.9.2'
 
     repositories {
@@ -49,7 +49,7 @@ buildscript {
 
 }
 plugins {
-    id 'com.github.hierynomus.license' version '0.14.0'
+    id 'com.github.hierynomus.license' version '0.15.0'
 }
 
 group 'com.irotsoma.cloudbackenc'
@@ -96,12 +96,27 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     //spring boot
-    compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile ('org.springframework.boot:spring-boot-starter-actuator'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
+    compile ('org.springframework.boot:spring-boot-starter-web'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
     compile 'org.springframework.boot:spring-boot-starter-log4j2'
-    compile 'org.springframework.boot:spring-boot-starter-security'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-mail'
+    compile ('org.springframework.boot:spring-boot-starter-security'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
+    compile ('org.springframework.boot:spring-boot-starter-data-jpa'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
+    compile ('org.springframework.boot:spring-boot-starter-mail'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
     //compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-devtools'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
@@ -132,7 +147,10 @@ dependencies {
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
     //test
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile ('org.springframework.boot:spring-boot-starter-test'){
+        exclude module: "spring-boot-starter-logging"
+        exclude module: "logback-classic"
+    }
 
 
 }
@@ -170,7 +188,7 @@ copyLicenseReports.mustRunAfter 'downloadLicenses'
 //javadoc stuff for Kotlin
 apply plugin: 'org.jetbrains.dokka'
 dokka {
-    outputFormat = 'javadoc'
+    outputFormat = 'html'
     outputDirectory = "$buildDir/docs/javadoc"
 }
 task javadocJar(type: Jar, dependsOn: dokka) {
