Completed changes to Common Encryption library and refactored other applications to use the changes.

--- a/config/application.properties
+++ b/config/application.properties
@@ -35,10 +35,6 @@ encryptionextensions.configFileName = encryption-extension.json
 encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
 
-info.build.name=${name}
-info.build.description=${description}
-info.build.version=${version}
-
 logging.file=./logs/CentralController.log
 logging.level.root=INFO
 logging.level.com.irotsoma=DEBUG
@@ -59,9 +55,9 @@ spring.mvc.async.request-timeout=6000
 server.connection-timeout=6000
 
 # Email server settings
-spring.mail.username=
-spring.mail.host=
-spring.mail.password=
+spring.mail.username=fake
+spring.mail.host=test@fake.com
+spring.mail.password=fake
 spring.mail.default-encoding=UTF-8
 spring.mail.port=587
 spring.mail.protocol=smtp
