--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 buildscript {
     ext.commonVersion = '0.4-SNAPSHOT'
     ext.springBootVersion = '2.1.2.RELEASE'
-    ext.kotlinVersion = '1.3.11'
+    ext.kotlinVersion = '1.3.21'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
     ext.dokkaVersion = '0.9.17'
@@ -27,6 +27,7 @@ buildscript {
     ext.propdepsPluginVersion='0.0.10.RELEASE'
     ext.jacksonVersion='2.9.8'
     ext.swaggerVersion='2.9.2'
+    ext.javaMailVersion='1.6.3'
 
     repositories {
         jcenter()
@@ -117,7 +118,6 @@ dependencies {
         exclude module: "spring-boot-starter-logging"
         exclude module: "logback-classic"
     }
-    //compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-devtools'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
     kapt 'org.springframework.boot:spring-boot-configuration-processor'
@@ -146,6 +146,8 @@ dependencies {
     //swagger
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
+    //java mail
+    compile "com.sun.mail:jakarta.mail:$javaMailVersion"
     //test
     testCompile ('org.springframework.boot:spring-boot-starter-test'){
         exclude module: "spring-boot-starter-logging"
