--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>
 #
-databaseChangeLog:
-  - include:
-      file: db/changelog/db.changelog-1.0.yaml
+
+info.build.name=${name}
+info.build.description=${description}
+info.build.version=${version}
