--- a/config/application.properties
+++ b/config/application.properties
@@ -34,7 +34,6 @@ encryptionextensions.directory = config/extensions
 encryptionextensions.configFileName = encryption-extension.json
 encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
-
 logging.file=./logs/CentralController.log
 logging.level.root=INFO
 logging.level.com.irotsoma=DEBUG
@@ -48,24 +47,23 @@ spring.datasource.username=admin
 spring.datasource.password=insecurepassword
 
 spring.messages.basename=messages
-spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
 spring.mvc.async.request-timeout=6000
 server.connection-timeout=6000
 
 # Email server settings
-spring.mail.username=fake
-spring.mail.host=test@fake.com
-spring.mail.password=fake
+spring.mail.username=
+spring.mail.host=
+spring.mail.password=
 spring.mail.default-encoding=UTF-8
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.http.multipart.max-file-size=100MB
-spring.http.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
 
 server.port=33300
 
