Fixed some problems with the signing plugin for gradle 5

--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,10 @@ apply plugin: 'org.liquibase.gradle'
 def isReleaseVersion = !version.endsWith("SNAPSHOT")
 
 signing {
-    required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
+}
+tasks.withType(Sign) {
+    onlyIf { isReleaseVersion }
 }
 repositories {
     mavenCentral()
@@ -200,7 +202,7 @@ task sourceJar(type: Jar) {
 }
 
 artifacts {
-    archives jar
+    //archives jar
     archives sourceJar
     archives javadocJar
 }
