Changed JWT tokens to use asymmetric keys to allow for consumers to validate tokens and decode claims such as roles using a public key rather than needing to know the secret.

--- a/config/application.properties
+++ b/config/application.properties
@@ -25,7 +25,12 @@ cloudservices.configFileName = cloud-service-extension.json
 
 cloudservicefiles.maxFileVersions = 2
 
-jwt.secret = insecurepassword
+jwt.keyStore = ./config/security/keystore.p12
+jwt.keyStorePassword = insecurepassword
+jwt.keyStoreType = PKCS12
+jwt.keyAlias = cloudbackenc
+jwt.keyPassword = insecurepassword
+jwt.algorithm = SHA256withRSA
 #token expiration default = 30 days (2592000000 ms) until a better auth system is implemented
 jwt.expiration = 2592000000
 jwt.disabled=false
