Changed User Accounts in central controller to be soft deleted. Remove UI project as it is obsolete and doesn't work with latest changes anyway.

--- a/config/application.properties
+++ b/config/application.properties
@@ -25,15 +25,21 @@ cloudservices.configFileName = cloud-service-extension.json
 
 cloudservicefiles.maxFileVersions = 2
 
+# key to use for creating Java web tokens for authentication
 jwt.keyStore = ./config/security/keystore.p12
 jwt.keyStorePassword = insecurepassword
 jwt.keyStoreType = PKCS12
 jwt.keyAlias = cloudbackenc
 jwt.keyPassword = insecurepassword
 jwt.algorithm = SHA256withRSA
-#token expiration default = 30 days (2592000000 ms) until a better auth system is implemented
-jwt.expiration = 2592000000
-jwt.disabled=false
+# Token expiration in ms. If using the filecontroller to store tokens and periodically refresh them, this must be set larger
+# than the refresh value in filecontroller. Also, note that this should be set larger than any expected downtime of the
+# systems running filecontroller. For example, if filecontroller runs on a desktop pc that is often down for the weekend
+# this should probably be set to greater than 2 days otherwise the next time filecontroller tries to refresh tokens, the
+# existing token will already have expired.
+jwt.expiration = 2592000
+# disable jwt tokens and use only username/password authentication if true
+jwt.disabled = false
 
 encryptionextensions.directory = config/extensions
 encryptionextensions.configFileName = encryption-extension.json
