--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 buildscript {
     ext.commonVersion = '0.4-SNAPSHOT'
     ext.springBootVersion = '2.1.2.RELEASE'
-    ext.kotlinVersion = '1.3.21'
+    ext.kotlinVersion = '1.3.30'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.apacheCommonsIoVersion = '1.3.2'
     ext.dokkaVersion = '0.9.17'
@@ -28,6 +28,7 @@ buildscript {
     ext.jacksonVersion='2.9.8'
     ext.swaggerVersion='2.9.2'
     ext.javaMailVersion='1.6.3'
+    ext.junitVersion='5.5.0-M1'
 
     repositories {
         jcenter()
@@ -152,7 +153,8 @@ dependencies {
         exclude module: "spring-boot-starter-logging"
         exclude module: "logback-classic"
     }
-
+    testCompile("org.junit.jupiter:junit-jupiter:$junitVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
 
 }
 sourceSets {
