Changed cloud service extensions to allow for additional settings and moved client secrets and URIs to this model to be loaded from either the json config file or added by the consumer of the extension.

--- a/config/application.properties
+++ b/config/application.properties
@@ -45,6 +45,9 @@ encryptionextensions.directory = config/extensions
 encryptionextensions.configFileName = encryption-extension.json
 encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
+cloudservices.cloudServicesSecrets.1d3cb21f-5b88-4b3c-8cb8-1afddf1ff375.clientId = testId
+cloudservices.cloudServicesSecrets.1d3cb21f-5b88-4b3c-8cb8-1afddf1ff375.clientSecret = testSecret
+
 logging.file=./logs/CentralController.log
 logging.level.root=INFO
 logging.level.com.irotsoma=DEBUG
@@ -83,3 +86,5 @@ server.ssl.key-store = ./config/security/keystore.p12
 server.ssl.key-store-password = insecurepassword
 server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = cloudbackenc
+
+
