--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>
 #
-spring.application.name=CloudBackEnc
+spring.application.name=CloudBackEnc Central Controller
 
 info.build.name=${name}
 info.build.description=${description}
