--- a/config/application.properties
+++ b/config/application.properties
@@ -45,8 +45,12 @@ encryptionextensions.directory = config/extensions
 encryptionextensions.configFileName = encryption-extension.json
 encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
+# to use the google drive extension (1d3cb21f-5b88-4b3c-8cb8-1afddf1ff375 is the google drive extension UUID),
+# you can include your client id and secret here.
+# This comes from the Google developers console under credentials -> OAuth 2.0 Client IDs
 cloudservices.cloudServicesSecrets.1d3cb21f-5b88-4b3c-8cb8-1afddf1ff375.clientId = testId
 cloudservices.cloudServicesSecrets.1d3cb21f-5b88-4b3c-8cb8-1afddf1ff375.clientSecret = testSecret
+
 
 logging.file=./logs/CentralController.log
 logging.level.root=INFO
